[package]
name = "content-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = [""] }
clap = { version = "4.5.7", features = ["derive"] }
directories = "5.0.1"
inquire = "0.7.5"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.38.0"
